--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -24,15 +24,21 @@
             <tr>
                 <td>
                     <a href="{{ product.get_absolute_url }}">
-                        <img class="img-thumbnail" src="{% if product.pic %}
-                          {{ product.pic.url }}
+                        <img class="img-thumbnail" src="{% if product.image %}
+                          {{ product.image.url }}
                           {% else %}
                           {% static "img/no_image.png" %}
                           {% endif %}" alt="{{ product.slug }}">
                     </a>
                 </td>
                 <td>{{ product.name }}</td>
-                <td>{{ product.quantiti }}</td>
+                <td>
+                <form action="{% url "cart:cart_add" product.id %}" method="POST">
+                    {{ product.update_quantity_form.quantity }}
+                    {{ product.update_quantity_form.update }}
+                    <input class="btn btn-small" type="submit" value="Zmień">
+                    {% csrf_token %}
+                </form></td>
                 <td><a href="{% url "cart:cart_remove" product.id %} }}">Usuń</a></td>
                 <td>{{ item.price }} zł</td>
                 <td>{{ item.total_price }} zł</td>
