--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -53,5 +53,5 @@
     </tbody>
     </table>
     <p class="text-right"><a href="{% url 'shop:product_list' %}" class="button light">Kontynuuj zakupy</a>
-        <a href="#" class="button">Do kasy</a></p>
+        <a href="{% url "orders:order_create" %}" class="button">Do kasy</a></p>
 {% endblock %}
