--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -12,7 +12,7 @@
       <div class="item">
         <a href="{{ product.get_absolute_url }}">
             <v-img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
-            <div class="price-small_cont right mr-2 mt-2">
+            <div class="price-small-cont right mr-2 mt-2">
             <h3 class="body-2">{{ product.price }} zł</h3>
                 </div>
             </v-img>
