--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,17 +9,13 @@ body {
 
 
 h1, h2, h3, h4, h5 , h6 { 
-    font-family: 'Ubuntu', sans-serif; font-weight:normal;
+    font-family: 'Stark', sans-serif; font-weight:normal;
 }
 
 a {
     text-decoration:none;
-    color:#5993bb;
 }
 
-a:hover {
-    color:#77b6e2;
-}
 
 a.button, input[type="submit"] {
     color:#fff;
@@ -118,7 +114,86 @@ ul.errorlist {
 }
 
 .v-navigation-drawer {
-    font-family: 'Cinzel', serif;
+  font-family: 'Freeway Gothic'
+}
+
+.menu-head {
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-top-color: #d6d5d2;
+    display: block;
+    width: 150px;
+    margin-left: 20px;
+}
+/*.menu-head::after {*/
+    /*display: block;*/
+   /*content: '';*/
+  /*width: 100%;*/
+  /*height: 1px;*/
+  /*background: black;*/
+  /*position: absolute;*/
+  /*bottom: 20px;*/
+  /*left: 0;*/
+/*}*/
+
+
+.menu-item {
+  font-family: 'Stark', sans-serif !important;
+
+}
+.menu-item a:hover{
+    color: #ffc107;
+}
+.login-btn {
+    background-color: #171717;
+    color: #d6d5d2;
+    width: 85px;
+    height: 25px;
+    border-radius: 15px;
+    z-index: 0;
+    font-size: 10px;
+    font-weight: bolder;
+    cursor: pointer;
+    outline:0;
+
+}
+.sign-up-btn {
+    background-color: #ffc107;
+    color: #171717;
+    width: 85px;
+    height: 25px;
+    border-radius: 15px;
+    z-index: 1;
+    margin-left: -20px;
+    font-size: 10px;
+    cursor: pointer;
+    outline:0;
+}
+.sign-up-btn a {
+    cursor: pointer;
+}
+
+.total-price {
+    color: #d6d5d2;
+    font-family: 'Stark';
+    text-decoration: none;
+}
+
+.logo_small {
+    /*!*background-image: url("../img/logo_small.png");*!*/
+    /*!*background-size: cover;*!*/
+    /*height: 100px;*/
+    /*width: 120px;*/
+    padding: 10%;
+    width: 160px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.logo_small img {
+    width: 100%;
+    height: 100%;
+    opacity: .23;
 }
 
 
@@ -143,7 +218,7 @@ ul.errorlist {
     margin-right:10%;
 }
 #wallpaper {
-    background-image: url("../img/background1.png");
+    background-image: url("../img/background_1.png");
     background-size: cover;
     width: 100%;
     height: 620px;
@@ -200,6 +275,28 @@ ul.errorlist {
     margin-right:-220px; 
     overflow:hidden;
 }
+.logo {
+    height: 300px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    top: 100px;
+    position: relative;
+}
+.logo img {
+    width: 100%;
+    height: 100%;
+}
+
+.left-menu {
+    background-color:#171717 !important;
+    color: #d6d5d2 !important;
+}
+.bright-font {
+    color: #d6d5d2 !important;
+}
+
+
 .upper_cont {
     position: absolute;
     top: 10px;
@@ -208,15 +305,22 @@ ul.errorlist {
     width: auto;
 }
 
+.upper_cont form {
+    display: inline-block;
+}
+
 .product-list .item {
     width:25%;
     padding:10px 20px 10px 0;
     float:left;
     text-align:center;
     line-height:1.2;
+    font-family: Stark;
 }
-.product-list h1 {
+.list a h1 {
     text-transform: uppercase;
+    font-family: Stark;
+    color: black;
 }
 
 .product-list .item img {
@@ -234,13 +338,20 @@ ul.errorlist {
     font-weight:bold;
 }
 
-.price-small_cont {
-    background-color: #ffc107;
+.price-small-cont {
+    /*background-color: #ffc107;*/
     border-radius: 10%;
     display: inline-block;
     width: auto;
     height: auto;
     padding:5px;
+    background-color: rgba(255, 193, 7, 0.5)
+
+}
+.price-small-cont h3{
+    z-index: 1;
+    color: #171717;
+    opacity: 1;
 }
 
 .product-detail img {
@@ -375,3 +486,37 @@ td img {
     display: inline-block;
     position: relative;
 }
+
+@font-face {
+    font-family: 'freewaygothic';
+    src: url('/static/fonts/freeway_gothic/freewaygothic.eot');
+    src: url('/static/fonts/freeway_gothic/freewaygothic.eot') format('embedded-opentype'),
+         url('/static/fonts/freeway_gothic/freewaygothic.woff2') format('woff2'),
+         url('/static/fonts/freeway_gothic/freewaygothic.woff') format('woff'),
+         url('/static/fonts/freeway_gothic/freewaygothic.ttf') format('truetype'),
+         url('/static/fonts/freeway_gothic/freewaygothic.svg#freewaygothic') format('svg');
+}
+@font-face {
+    font-family: 'Futurist';
+    src: url('/static/fonts/futurist_fixed_width/FUTRFW.eot');
+    src: url('/static/fonts/futurist_fixed_width/FUTRFW.eot') format('embedded-opentype'),
+         url('/static/fonts/futurist_fixed_width/FUTRFW.woff2') format('woff2'),
+         url('/static/fonts/futurist_fixed_width/FUTRFW.woff') format('woff'),
+         url('/static/fonts/futurist_fixed_width/FUTRFW.ttf') format('truetype'),
+         url('/static/fonts/futurist_fixed_width/FUTRFW.svg') format('svg');
+}
+
+
+
+    @font-face {
+    font-family: 'Stark';
+    src: url('/static/fonts/stark2/Stark.eot');
+    src: url('/static/fonts/stark2/Stark.eot?#iefix') format('embedded-opentype'),
+        url('/static/fonts/stark2/Stark.woff2') format('woff2'),
+        url('/static/fonts/stark2/Stark.woff') format('woff'),
+        url('/static/fonts/stark2/Stark.ttf') format('truetype'),
+        url('/static/fonts/stark2/Stark.svg#Stark') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
