--- a/accounts/templates/sign-up.html
+++ b/accounts/templates/sign-up.html
@@ -1,28 +1,39 @@
 {% extends "shop/base.html" %}
 {% load static %}
 {% block form %}
-    <v-container>
-        <v-layout row align-content-end>
-            <v-flex xs4>
+    <v-container class="sign-up-form">
+        <v-layout row>
+            <v-flex md4>
             </v-flex>
 
-            <v-flex xs4>
-                <v-text-field
-                        label="Regular"
+            <v-flex md4>
+                <v-text-field light
+                        label="E-mail"
                 ></v-text-field>
             </v-flex>
-            <v-flex xs4>
+            <v-flex md4>
             </v-flex>
-            <v-flex xs4>
+            </v-layout>
+        <v-layout row>
+            <v-flex md4>
             </v-flex>
-            <v-flex xs4>
-                <v-text-field
-                        label="Regular"
-                        placeholder="Placeholder"
+            <v-flex md4>
+                <v-text-field class="title"
+                        label="Name"
                 ></v-text-field>
             </v-flex>
-            <v-flex xs4>
+            <v-flex ms4>
             </v-flex>
+        </v-layout>
+    <v-layout row>
+        <v-flex 12-md class="justify-text-center align-center">
+            <v-card-actions>
+  <v-button class="sign-up-btn">SIGN UP</v-button>
+</v-card-actions>
+
+</v-flex>
+
+
         </v-layout>
     </v-container>
 {% endblock %}
