--- a/Shop/main/templates/shop/base.html
+++ b/Shop/main/templates/shop/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load active_class %}
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
     <meta charset="utf-8"/>
     <title>{% block title %}Old Barber's Corner Club{% endblock %}</title>
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
-    <link href="{% static "css/base.css" %}" rel="stylesheet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
 <body>
 <div id="app">
@@ -37,20 +37,20 @@
 
                 <v-list dense class="bright-font">
                     {% for c in categories %}
-                        <v-list-tile
-                                class="ml-3 bright-font menu-item {% if category.slug == c.slug %} selected{% endif %}"
-                                :key="'{{ c.name }}'"
-                                :href="'{{ c.get_absolute_url }}'"
+                    <v-list-tile
+                            class="ml-3 bright-font menu-item {% if category.slug == c.slug %} selected{% endif %}"
+                            :key="'{{ c.name }}'"
+                            :href="'{{ c.get_absolute_url }}'"
 
-                        >{{ c.name }}
-                            <v-list-tile-action>
-                                <v-icon></v-icon>
-                            </v-list-tile-action>
+                    >{{ c.name }}
+                        <v-list-tile-action>
+                            <v-icon></v-icon>
+                        </v-list-tile-action>
 
-                            <v-list-tile-content>
-                                <v-list-tile-title></v-list-tile-title>
-                            </v-list-tile-content>
-                        </v-list-tile>
+                        <v-list-tile-content>
+                            <v-list-tile-title></v-list-tile-title>
+                        </v-list-tile-content>
+                    </v-list-tile>
                     {% endfor %}
                     <v-list-tile
                             :href="'{{ c.get_absolute_url }}'"
@@ -61,81 +61,83 @@
             </v-navigation-drawer>
         </div>
         <div class="right-cont">
-        <v-navigation-drawer>
-        <v-toolbar color="#171717" class="hidden-md-and-up" @click="">
-      <v-toolbar-side-icon slot="activator"></v-toolbar-side-icon>
-      <v-toolbar-title>Title</v-toolbar-title>
-      <v-spacer></v-spacer>
-            <v-btn small fab></v-btn>
-            <v-btn small fab></v-btn>
-            <v-btn small fab><v-icon>create</v-icon></v-btn>
-      <v-toolbar-items class="hidden-sm-and-down">
-          <v-list dense class="bright-font">
-                    {% for c in categories %}
-                        <v-list-tile
-                                class="ml-3 bright-font menu-item {% if category.slug == c.slug %} selected{% endif %}"
-                                :key="'{{ c.name }}'"
-                                :href="'{{ c.get_absolute_url }}'"
+            <v-navigation-drawer>
+                <v-toolbar color="#171717" class="hidden-md-and-up" @click="">
+                    <v-toolbar-side-icon slot="activator"></v-toolbar-side-icon>
+                    <v-toolbar-title>Title</v-toolbar-title>
+                    <v-spacer></v-spacer>
+                    <v-btn small fab></v-btn>
+                    <v-btn small fab></v-btn>
+                    <v-btn small fab>
+                        <v-icon>create</v-icon>
+                    </v-btn>
+                    <v-toolbar-items class="hidden-sm-and-down">
+                        <v-list dense class="bright-font">
+                            {% for c in categories %}
+                            <v-list-tile
+                                    class="ml-3 bright-font menu-item {% if category.slug == c.slug %} selected{% endif %}"
+                                    :key="'{{ c.name }}'"
+                                    :href="'{{ c.get_absolute_url }}'"
 
-                        >{{ c.name }}
-                            <v-list-tile-action>
-                                <v-icon></v-icon>
-                            </v-list-tile-action>
+                            >{{ c.name }}
+                                <v-list-tile-action>
+                                    <v-icon></v-icon>
+                                </v-list-tile-action>
 
-                            <v-list-tile-content>
-                                <v-list-tile-title></v-list-tile-title>
-                            </v-list-tile-content>
-                        </v-list-tile>
-                    {% endfor %}
-                    <v-list-tile
-                            :href="'{{ c.get_absolute_url }}'"
-                    >
-                    </v-list-tile>
-                </v-list>
-      </v-toolbar-items>
-    </v-toolbar>
-        </v-navigation-drawer>
+                                <v-list-tile-content>
+                                    <v-list-tile-title></v-list-tile-title>
+                                </v-list-tile-content>
+                            </v-list-tile>
+                            {% endfor %}
+                            <v-list-tile
+                                    :href="'{{ c.get_absolute_url }}'"
+                            >
+                            </v-list-tile>
+                        </v-list>
+                    </v-toolbar-items>
+                </v-toolbar>
+            </v-navigation-drawer>
             <v-container fluid pa-0>
                 <v-layout row wrap>
                     <v-flex xs12 pa-0>
 
                         {% if category.slug == None %}
-                            <div id="wallpaper">
-                                <div class="logo">
-                                    <img src="../static/img/logo.png" alt="">
-                                </div>
+                        <div id="wallpaper">
+                            <div class="logo">
+                                <img src="../static/img/logo.png" alt="">
+                            </div>
 
-                                {% block form %}
-                                {% endblock %}
-                            </div> {% endif %}
+
+                        </div>
+                        {% endif %}
 
                         <div class="upper_cont">
 
 
-                            <a href="{% url 'cart:cart_detail' %}">
+                            <a href="{% url 'cart:cart_detail' %}"></a>
 
 
-                        <v-toolbar flat color="#171717">
+                            <v-toolbar flat color="#171717">
 
-                                    <v-list-tile-title class="title bright-font ml-2 pt-1 pb-2">
-                                        MENU
-                                    </v-list-tile-title>
+                                <v-list-tile-title class="title bright-font ml-2 pt-1 pb-2">
+                                    MENU
+                                </v-list-tile-title>
                                 </v-list-tile>
-                            </v-list>
-                        </v-toolbar>
+                                </v-list>
+                            </v-toolbar>
 
 
                             <div class="menu-head">
-                                    </div>
+                            </div>
                             </v-list>
 
 
-                        <v-list dense class="bright-font">
-                            {% for c in categories %}
+                            <v-list dense class="bright-font">
+                                {% for c in categories %}
                                 <v-list-tile class="ml-3 bright-font menu-item"
-                                        {% if category.slug == c.slug %}:class= "selected"{% endif %}
-                                        :key="'{{ c.name }}'"
-                                        :href="'{{ c.get_absolute_url }}'"
+                                             {% if category.slug== c.slug %}:class="selected" {% endif %}
+                                             :key="'{{ c.name }}'"
+                                             :href="'{{ c.get_absolute_url }}'"
 
                                 >{{ c.name }}
                                     <v-list-tile-action>
@@ -146,77 +148,35 @@
                                         <v-list-tile-title></v-list-tile-title>
                                     </v-list-tile-content>
                                 </v-list-tile>
-                            {% endfor %}
-                            <v-list-tile
-                                    {#                                        :class="{% if category.slug == c.slug %}class='selected'{% endif %}"#}
-                                    {#                                        :key="LOGIN"#}
-                                    {#                                        @click="'{{ c.get_absolute_url }}'"#}
-                                    :href="'{{ c.get_absolute_url }}'"
-                            >
-                                <v-list-tile-action>
-                                    <v-icon></v-icon>
-                                </v-list-tile-action>
+                                {% endfor %}
+                                <v-list-tile
+                                        {# :class="{% if category.slug == c.slug %}class='selected'{% endif %}" #}
+                                        {# :key="LOGIN" #}
+                                        {# @click="'{{ c.get_absolute_url }}'" #}
+                                        :href="'{{ c.get_absolute_url }}'"
+                                >
+                                    <v-list-tile-action>
+                                        <v-icon></v-icon>
+                                    </v-list-tile-action>
 
-                                <v-list-tile-content>
-                                    <v-list-tile-title></v-list-tile-title>
-                                </v-list-tile-content>
-                            </v-list-tile>
-                        </v-list>
-                    </v-navigation-drawer>
-                </v-flex>
-                <v-flex xs10 pa-0>
+                                    <v-list-tile-content>
+                                        <v-list-tile-title></v-list-tile-title>
+                                    </v-list-tile-content>
+                                </v-list-tile>
+                            </v-list>
+                            </v-navigation-drawer>
+                        </div>
+                    </v-flex>
+                    <v-flex xs10 pa-0>
 
-                    {% if category.slug == None %}
+                        {% if category.slug == None %}
                         <div id="wallpaper">
-                        <div class="logo">
-                            <img src="../static/img/logo.png" alt="">
+                            <div class="logo">
+                                <img src="../static/img/logo.png" alt="">
+                            </div>
+
                         </div>
-                        {% block form %}
-                                        {% endblock %}
-                        </div> {% endif %}
-                    {#                       <div id="wallpaper"></div>#}
-                    <div class="upper_cont">
-                    <span><v-icon color="#d6d5d2">
-                                    shopping_cart
-                                </v-icon></span>
-                        <div class="cart">
-                            <a href="{% url 'cart:cart_detail' %}">
-
-                                <div class="total-price">
-                                    {{ cart.get_total_price }} PLN
-                                </div>
-                            </a>
-
-                            <a href="{% url 'cart:cart_detail' %}">
-                                <span>
-                                    <v-icon color="#d6d5d2">
-                                        shopping_cart
-                                    </v-icon>
-                                </span>
-                            </a>
-
-                            {% if user.is_authenticated %}
-                                <a href="{% url 'account:login' %}">
-                                    <button class="login-btn">LOGOUT</button>
-                                </a>
-                            {% else %}
-                                <a href="{% url 'account:login' %}">
-                                    <button class="login-btn">LOGIN</button>
-                                </a>
-
-                            {% endif %}
-                            <a href="{% url 'account:sign_up' %}">
-                                <button class="sign-up-btn">SIGN UP</button>
-                            </a>
-                        </div>
-                        <div id="content">
-                            <v-content>
-                                <v-container>
-                                    {% block content %}
-                                    {% endblock %}
-                                </v-container>
-                            </v-content>
-                        </div>
+                        {% endif %}
                     </v-flex>
                 </v-layout>
             </v-container>
@@ -233,8 +193,9 @@
         data: {
             name: "dominik"
         },
-        methods:{
-            active: function(){}
+        methods: {
+            active: function () {
+            }
         }
     });
     Vue.use(Vuetify, {
